# rust_chess

./: Cargo.toml  README.md
assets/sprites/: all_pieces.ron  board.ron  option_square.ron
config/: display_config.ron  input.ron
src/: input.rs  main.rs  state.rs
src/components/: board.rs  mod.rs  physics.rs  sprite.rs
src/entities/: board.rs  display.rs  mod.rs  pieces.rs
src/resources/: mod.rs  play.rs  selected.rs  sprite_cache.rs
src/systems/: animation.rs  board.rs  display.rs  input.rs  mod.rs  physics.rs
src/utils/: mod.rs  pieces.rs
src/utils/pieces/: mod.rs  movements.rs
