[package]
name = "rust_chess"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
anyhow = "1.0"
specs-derive = "0.4.1"
tuple-map = "0.4.0"
nalgebra = "0.19.0"
serde = { version = "1", features = ["derive"] }
itertools = "0.9.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
